--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -553,10 +553,16 @@ header {
     height: 100%; }
 
 .influencer-list {
-  margin: 0 0 0 20%;
+  margin: 90px 0 0 20%;
   color: white;
   height: 100%;
   width: 40%; }
+  @media only screen and (max-width: 64em) and (orientation: portrait) {
+    .influencer-list {
+      margin: 0 0 0 0; } }
+  @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
+    .influencer-list {
+      margin: 80px 0 0 20%; } }
   .influencer-list h3 {
     font-size: 1.3em;
     font-family: "Futura Light";
@@ -584,6 +590,8 @@ header {
     font-family: 'Harriet Regular';
     text-align: center; }
   .info-pages p {
+    padding-bottom: 50px;
+    box-sizing: border-box;
     font-family: 'Harriet Regular';
     font-size: 1.3em;
     position: absolute;
@@ -608,6 +616,7 @@ header {
     .info-pages {
       padding-top: 2%; }
       .info-pages p {
+        padding-bottom: 30px;
         font-size: 0.95em;
         font-family: 'Harriet Regular';
         position: absolute;
@@ -677,7 +686,7 @@ header {
   font-family: "Harriet Regular"; }
 .team__bottom-copy {
   margin: 5% 0 0 0;
-  font-size: 1.3em; }
+  font-size: 1.1em; }
 
 .personal {
   height: 100%;
@@ -835,8 +844,8 @@ header {
   .what__button {
     cursor: pointer;
     border-radius: 50%;
-    height: 110px;
-    width: 110px;
+    height: 105px;
+    width: 105px;
     position: relative;
     float: left;
     background-color: black;
