go thorough some of rosas changes

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -594,7 +594,7 @@ header {
   .info-pages p {
     padding-bottom: 50px;
     box-sizing: border-box;
-    font-family: 'Harriet Regular';
+    font-family: 'Futura Light';
     font-size: 1.3em;
     position: absolute;
     left: 50%;
