--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -805,7 +805,7 @@ header {
 	p {
 		padding-bottom: 50px;
 		box-sizing: border-box;
-		font-family: 'Harriet Regular';
+		font-family: 'Futura Light';
 		font-size: 1.3em;
 		@include center-horizontal;
 		width: 40%;
