--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -35,8 +35,8 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   position: relative;
-  max-width: 100%;
-  max-height: 100%; }
+  max-width: 90%;
+  max-height: 90%; }
 
 header, main {
   position: fixed;
@@ -124,6 +124,8 @@ header {
   height: calc(100% - 20px);
   width: calc(60% - 20px);
   margin: 10px 10px 10px 10px; }
+  .media img {
+    position: absolute; }
   @media only screen and (max-width: 64em) and (orientation: portrait) {
     .media {
       position: absolute;
@@ -134,6 +136,26 @@ header {
       width: 100%;
       height: 50%;
       margin: 0 0 0 0; } }
+  .media__arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 50px;
+    width: 50px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    cursor: pointer; }
+    .media__arrow--left {
+      -webkit-filter: invert(1);
+      filter: invert(1);
+      background-image: url("../imgs/icons/Icon-71.png");
+      left: calc(0% + 50px); }
+    .media__arrow--right {
+      -webkit-filter: invert(1);
+      filter: invert(1);
+      background-image: url("../imgs/icons/Icon-72.png");
+      left: calc(100% - 50px); }
 
 .copy {
   clear: both;
