--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -164,8 +164,8 @@ p {
 img {
 	@include center;
 	position: relative;
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 90%;
+	max-height: 90%;
 }
 
 header, main {
@@ -273,6 +273,9 @@ header {
 	height: calc(100% - 20px);
 	width: calc(60% - 20px);
 	margin: 10px 10px 10px 10px;
+	img {
+		position: absolute;
+	}
 	@include respond-to(handhelds) {
 		@include center-horizontal;
 		position: relative;
@@ -280,6 +283,26 @@ header {
 		width: 100%;
 		height: 50%;
 		margin: 0 0 0 0;
+	}
+	&__arrow {
+		@include center;
+		height: 50px;
+		width: 50px;
+		background-size: cover;
+		background-repeat: no-repeat;
+		cursor: pointer;
+		&--left {
+			-webkit-filter: invert(1);
+			filter: invert(1);
+			background-image: url($img-path + $back-icon);
+			left: calc(0% + 50px);
+		}
+		&--right {
+			-webkit-filter: invert(1);
+			filter: invert(1);
+			background-image: url($img-path + $forward-icon);
+			left: calc(100% - 50px);
+		}
 	}
 }
 
