--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -74,6 +74,10 @@ header {
     background-image: url("../imgs/backgrounds/TAG-The-Agency-website-production-bg.png"); }
   .background--influencers {
     background-image: url("../imgs/backgrounds/TAG-The-Agency-website-influencers-bg.png"); }
+    @media only screen and (max-width: 64em) and (orientation: portrait) {
+      .background--influencers {
+        background-color: black;
+        background-image: url("../imgs/backgrounds/TAG-The-Agency-website-influencers-bg.png"); } }
   .background--strategy {
     background-image: url("../imgs/backgrounds/upload_11_10_2016_at_2_19_10_PM.png"); }
   .background--vr {
@@ -209,7 +213,7 @@ header {
 
 .icons {
   position: absolute;
-  top: 500px;
+  bottom: 0;
   width: calc(40% - 60px);
   height: calc(20% - 10px);
   margin: 0 50px 10px 10px; }
@@ -218,10 +222,6 @@ header {
       position: relative;
       width: 60%;
       top: 65px; } }
-  @media only screen and (min-width: 64em) and (max-width: 90em), (max-width: 64em) and (orientation: landscape) {
-    .icons {
-      position: relative;
-      top: 75px; } }
   .icons__icon {
     float: left;
     width: 15%;
