--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,7 +15,6 @@
   transform: translate(-50%, -50%); }
 
 html, body, header, main {
-  overflow: hidden;
   margin: 0 0 0 0;
   box-sizing: border-box;
   height: 100%; }
@@ -1009,6 +1008,7 @@ header {
   height: 100%; }
 
 .mobile-nav-menu {
+  overflow: visible;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.7);
   height: 500px;
