--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -146,7 +146,7 @@ $xlarge-breakpoint: em(1920) !default;
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 html, body, header, main {
-	overflow: hidden;
+	// overflow: hidden;
 	margin: 0 0 0 0;
 	box-sizing: border-box;
 	height: 100%;
@@ -1240,6 +1240,7 @@ header {
 }
 
 .mobile-nav-menu {
+	overflow: visible;
 	z-index: 2;
 	background-color: rgba(0,0,0,0.7);
 	height: 500px;
