--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -155,15 +155,11 @@ header {
     background-repeat: no-repeat;
     cursor: pointer; }
     .media__arrow--left {
-      -webkit-filter: invert(1);
-      filter: invert(1);
       background-image: url("../imgs/icons/Icon-71.png");
-      left: calc(0% + 50px); }
+      left: calc(0% - 25px); }
     .media__arrow--right {
-      -webkit-filter: invert(1);
-      filter: invert(1);
       background-image: url("../imgs/icons/Icon-72.png");
-      left: calc(100% - 50px); }
+      left: calc(100% + 25px); }
 
 .copy {
   clear: both;
@@ -490,6 +486,12 @@ header {
     -ms-box-orient: horizontal;
     height: 50%;
     width: 100%; }
+    .work-examples__row-1--center, .work-examples__row-2--center {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
   @media only screen and (max-width: 64em) and (orientation: portrait) {
     .work-examples__row-2 {
       display: none; } }
